Organizaçao e pequenos ajustes

--- a/index.html
+++ b/index.html
@@ -11,19 +11,43 @@
 <body>
   <header>
     <div class="navbar">
-      <div class="navbar-content">
+      <div class="logo-text">
         <img src="/Chaos2020.png" alt="chaoslogo">
         <h1>C:\xindows\system64\chaos2020.exe</h1>
-        <ul class="nav-buttons">
-          <li><i class="fas fa-window-minimize"></i></li>
-          <li><i class="fas fa-window-maximize"></i></li>
-          <li><i class="fas fa-window-close"></i></li>
-        </ul>
       </div>
+      <ul class="nav-buttons">
+        <li><i class="fas fa-window-minimize fa-lg"></i></li>
+        <li><i class="fas fa-window-maximize fa-lg"></i></li>
+        <li><i class="fas fa-window-close fa-lg"></i></li>
+      </ul>
     </div>
   </header>
   <main>
-
+    <div class="content">
+      <h1>
+        CHAOS 2020 [VERSÃO DE DEMONSTRAÇÃO]
+        COPYRIGHT <c> HSS&SSK CORPORATION. TODOS OS DIREITOS RESERVADOS.
+      </h1>
+      <h2>2020, em algum lugar…</h2>
+      <p>
+        Neste futuro distópico, o lançamento de um dispositivo chamado “Cub0”, que é capaz de realizar todas a
+        s funções de uma televisão, rádio, celular e computador, substituiu todas essas tecnologias ultrapassa
+        das e prometeu “Revolucionar a humanidade”…
+      </p>
+      <p>
+        O problema é que ao se ligar com diversos dispositivos, o aparelho pode invadir qualquer sistema e dev
+        ido ao baixo custo, em algumas horas após seu lançamento, relatos de invasões, golpes virtuais e outro
+        s crimes foram registrados em todo o mundo.
+      </p>
+      <p>
+        Governos declararam guerra ao dispositivo e seus usuários, declarando estado de emergência. Hackers do
+        mundo todo aderem aos dois lados, mas muitos se uniram para defender a liberdade virtual. A segurança 
+        do mundo está, agora, nas mãos de quem um dia a ameaçou.
+      </p>
+      <h3>
+        Bem vindo a Chaos 2020.
+      </h3>
+    </div>
   </main>
   <footer>
   </footer>
